@@ -16,29 +16,14 @@
    <http://www.gnu.org/licenses/>.  */
 
 #ifndef	_SYS_EVENTFD_H
-#define	_SYS_EVENTFD_H	1
+# error "Never use <bits/eventfd.h> directly; include <sys/eventfd.h> instead."
+#endif
 
-#include <stdint.h>
-
-/* Get the platform-dependent flags.  */
-#include <bits/eventfd.h>
-
-/* Type for event counter.  */
-typedef uint64_t eventfd_t;
-
-
-__BEGIN_DECLS
-
-/* Return file descriptor for generic event channel.  Set initial
-   value to COUNT.  */
-extern int eventfd (int __count, int __flags) __THROW;
-
-/* Read event counter and possibly wait for events.  */
-extern int eventfd_read (int __fd, eventfd_t *__value);
-
-/* Increment event counter.  */
-extern int eventfd_write (int __fd, eventfd_t __value);
-
-__END_DECLS
-
-#endif /* sys/eventfd.h */
+/* Flags for eventfd.  */
+enum
+  {
+    EFD_CLOEXEC = 0x400000,
+#define EFD_CLOEXEC EFD_CLOEXEC
+    EFD_NONBLOCK = 0x004000
+#define EFD_NONBLOCK EFD_NONBLOCK
+  };
